tests/education/errors/DeleteErrorNotFoundUuid.bru
meta {
  name: DeleteErrorNotFoundUuid
  type: http
  seq: 11
}

delete {
  url: {{baseUrl}}/educations/{{externalGeneratedRandomUuid}}
  body: json
  auth: none
}

assert {
  res.status: in 400, 404
}
